--- a/hola_Git/res/values/strings.xml
+++ b/hola_Git/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">hola_Git</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello Mundo3</string>
     <string name="action_settings">Settings</string>
 
 </resources>
